# StepMesh

./: .gitignore  CMakeLists.txt  Introduction.md  Introduction_cn.md  Introduction_zh_cn.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
docs/: README.md  api.md  backend.md  c++.md  env.md  python.md
fserver/: __init__.py
fserver/csrc/: kernel.hpp  ops.cc  private.hpp  public.hpp  util.h  wait_kernel.cu
include/dmlc/: base.h  logging.h
include/ps/: af_tensor_app.h  hash_table8.hpp  kv_app.h  multi_qp.h  ps.h  sarray.h  simple_app.h
include/ps/internal/: backend.h  cpu_backend.h  customer.h  env.h  gpu_backend.h  message.h  multi_qp.h  parallel_kv_match.h  parallel_sort.h  postoffice.h  threadsafe_queue.h  trace.h  utils.h  van.h
src/: customer.cc  fabric_transport.h  fabric_utils.h  fabric_van.h  ibvwarp.h  meta.h  multi_van.h  network_utils.cc  network_utils.h  postoffice.cc  rdma_provider.h  rdma_transport.h  rdma_utils.h  rdma_van.h  resender.h  tp_van.h  ucx_van.h  van.cc  van_common.h  zmq_van.h
src/backend/: backend.cc  cpu_backend.cc  gpu_backend.cc  rocm_backend.cc
tests/: CMakeLists.txt  README.md  run.sh  stepmesh_echo_test.cc  stepmesh_pull_test.cc  test-mqp.sh  test.sh  test_af_group.sh  test_benchmark.cc  test_benchmark_af.cc  test_benchmark_af.sh  test_benchmark_af_gdr.cc  test_benchmark_af_gdr.sh  test_benchmark_af_tensor.cc  test_benchmark_af_verify.cc  test_benchmark_stress.cc  test_common.h  test_ipc_benchmark.cc  test_kv_app.cc  test_register_recv_buffer.cc
tests/benchmark/: bmk_comm_latency.py  bmk_comm_latency_multiserver.py
tests/fserver/: run.sh  run_multi_F.sh  run_multi_gpu.sh  run_multigpu.sh  run_single_gpu.sh  test_fserver.py  test_fserver_diff_stage.py  test_fserver_dynamic.py  test_kernel_wait.py  test_remote_moe.py  test_utils.py
tests/fserver/bmk/: bmk_comm_latency.py  bmk_comm_latency_multiserver.py
tests/nccl/: test_nccl_sendrecv.py
tests/utests/: CMakeLists.txt  run_multi_gpu_ut.sh  run_single_gpu_ut.sh  run_ut.sh  stepmesh_push_test.cc  stepmesh_register_test.cc  test_common.h  ut_common.h  ut_scheduler.cc  ut_server.cc  ut_tensor_worker.cc
tests/vllm/: attn.py  bind_pid.py  cycle.py  ffn.py  stepmesh_connector.py
tools/: cpplint.sh  install_deps.sh
